# rakuten.eda

./: README.md  pyproject.toml
src/: functions.py  main.py
tests/: test_functions.py
