[tool.poetry]
name = "rakuten-eda"
version = "0.1.0"
description = "EDA to the rakuten challenge"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rakuten"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
spacy = "^3.7.5"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
